# Virtual-Resume

./: .gitignore  README.md  pyproject.toml
gradio/: README.md  app.py
gradio/me/: summary.txt
