[project]
name = "virtual-resume-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.33.0",
    "openai>=1.84.0",
    "openai-agents>=0.0.17",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
